infrastructure/gateways/apisix-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: apisix
spec:
  controllerName: "apisix.apache.org/apisix-ingress-controller"

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: apisix
  namespace: ingress-apisix
spec:
  gatewayClassName: apisix
  listeners:

    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes: { namespaces: { from: All } }  

  infrastructure:
    parametersRef:
      group: apisix.apache.org
      kind: GatewayProxy
      name: apisix-config
